<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.marioparrillamaroto.myeventsapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_buscar"
        android:name="com.marioparrillamaroto.myeventsapp.ui.buscar.BuscarFragment"
        android:label="@string/title_buscar"
        tools:layout="@layout/fragment_buscar" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.marioparrillamaroto.myeventsapp.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_perfil"
        android:name="com.marioparrillamaroto.myeventsapp.ui.perfil.PerfilFragment"
        android:label="@string/title_perfil"
        tools:layout="@layout/fragment_perfil" />
</navigation>